k8s/frontend/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend-permissive
  namespace: app-services
spec:
  selector:
    matchLabels:
      app: frontend
  mtls:
    mode: PERMISSIVE
