k8s/frontend/authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend-allow
  namespace: app-services
spec:
  selector:
    matchLabels:
      app: frontend
  rules:
  - {}
